/*
 * Copyright 2021 Harness Inc. All rights reserved.
 * Use of this source code is governed by the PolyForm Shield 1.0.0 license
 * that can be found in the licenses directory at the root of this repository, also available at
 * https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.
 */

/* eslint-disable react/display-name */
import React from 'react'
import { render } from '@testing-library/react'

import { TestWrapper } from '@common/utils/testUtils'
import Summary, { SummaryProps as SummaryPropsInterface } from '../Summary'

const SummaryProps: SummaryPropsInterface = {
  summaryElement: <div />
}

describe('Testing Summary', () => {
  test('snapshot with summaryElement', () => {
    const { container } = render(
      <TestWrapper>
        <Summary {...SummaryProps} />
      </TestWrapper>
    )
    expect(container).toMatchSnapshot()
  })

  test('snapshot without summaryElement', () => {
    const { container } = render(
      <TestWrapper>
        <Summary />
      </TestWrapper>
    )
    expect(container).toMatchSnapshot()
  })
})
